Update page - workers.html 82bf1d20e28ef8e426f1b92f11579ac5a649b229

--- a/food-resources/index.html
+++ b/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Food and food assistance</h1>
           
-            <p class="small-text">Last updated&nbsp;March 15, 2021 at 9:14 AM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 3:01 PM</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><a href="https://covid19.ca.gov/food-resources/#emergency-food"><strong>Emergency food and food benefits</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#families-with-school-aged-children"><strong>Families with school-aged children</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#older-adults"><strong>Older adults</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#grocery-delivery-options"><strong>Grocery delivery options</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#how-you-can-help"><strong>How you can help</strong></a></li></ul>
+<ul class="toc"><li><a href="https://covid19.ca.gov/food-resources/#emergency-food"><strong>Emergency food and food benefits</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#families-with-school-aged-children"><strong>Families with school-aged children</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#older-adults"><strong>Older adults</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#grocery-delivery-options"><strong>Grocery delivery options</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#how-you-can-help"><strong>How you can help</strong></a></li></ul>
 
 
 
@@ -173,15 +173,15 @@
 
 
 
-<h3 class="js-qa-question">CalFresh food benefits</h3>
+<h3>CalFresh food benefits</h3>
 
 
 
-<p class="js-qa-answer">CalFresh provides food benefits to help people buy most foods at most grocery stores and farmers markets. People and families with low income can apply for CalFresh any time. If you have a change in income, even a temporary one because of the coronavirus, you can apply for CalFresh food benefits.</p>
+<p>CalFresh provides food benefits to help people buy most foods at most grocery stores and farmers markets. People and families with low income can apply for CalFresh any time. If you have a change in income, even a temporary one because of the coronavirus, you can apply for CalFresh food benefits.</p>
 
 
 
-<p class="js-qa-answer">To apply, visit&nbsp;<a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>&nbsp;online or call&nbsp;<a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
+<p>To apply, visit&nbsp;<a href="https://www.getcalfresh.org/?source=cagov">CalFresh</a>&nbsp;online or call&nbsp;<a href="tel:[1-877-847-3663]">1-877-847-3663</a> (1-877-847-FOOD). </p>
 
 
 
