--- a/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotel rooms for California healthcare workers</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 3:59 PM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 3:01 PM</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#program-eligibility">Program eligibility</a></strong></li><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#reserve-room">Reserving a room</a></strong></li><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">Point of Contact for healthcare facilities</a></strong></li><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#questions-workers">Questions and answers</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#program-eligibility">Program eligibility</a></strong></li><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#reserve-room">Reserving a room</a></strong></li><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">Point of Contact for healthcare facilities</a></strong></li><li><strong><a href="https://covid19.ca.gov/hotel-rooms-for-california-healthcare-workers/#questions-workers">Questions and answers</a></strong></li></ul>
 
 
 
