--- a/workers/index.html
+++ b/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Workers</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 9:52 AM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 3:02 PM</p>
           
         </div>
       </div>
@@ -165,7 +165,7 @@
 
 
 
-<ul><li><strong><a href="#ui">Unemployment insurance</a></strong></li><li><strong><a href="#safe-workplaces">Keeping workplaces safe</a></strong></li><li><strong><a href="#working-parents">Support for working parents</a></strong></li><li><strong><a href="#temp-housing">Temporary housing for essential workers</a></strong></li><li><strong><a href="#questions-workers">Questions and answers</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#ui">Unemployment insurance</a></strong></li><li><strong><a href="#safe-workplaces">Keeping workplaces safe</a></strong></li><li><strong><a href="#working-parents">Support for working parents</a></strong></li><li><strong><a href="#temp-housing">Temporary housing for essential workers</a></strong></li><li><strong><a href="#questions-workers">Questions and answers</a></strong></li></ul>
 
 
 
