--- a/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotel rooms for California healthcare workers</h1>
           
-            <p class="small-text">Last updated&nbsp;March 25, 2021 at 3:01 PM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 3:11 PM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
 
 
 
-<p>On this page:</p>
+<p class="h3">On this page:</p>
 
 
 
