Update translation - 105125682 (#3873) b2e20ba7f34cde7ea26a5b3f5e8e62313b51dbb7

--- a/ar/workers/index.html
+++ b/ar/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>العاملون</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:52 ص الساعة 10 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:13 م الساعة 25 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>في هذه الصفحة:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><strong><a href="#ui">تأمين خاص بالبطالة</a></strong></li><li><strong><a href="#safe-workplaces">المحافظة على أماكن العمل آمنة</a></strong></li><li><strong><a href="#working-parents">دعم الآباء والأمهات العاملين</a></strong></li><li><strong><a href="#temp-housing">توفير وحدات سكنية مؤقتة للعمالة الأساسية</a></strong></li><li><strong><a href="#questions-workers">أسئلة وإجابات</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#ui">تأمين خاص بالبطالة</a></strong></li><li><strong><a href="#safe-workplaces">المحافظة على أماكن العمل آمنة</a></strong></li><li><strong><a href="#working-parents">دعم الآباء والأمهات العاملين</a></strong></li><li><strong><a href="#temp-housing">توفير وحدات سكنية مؤقتة للعمالة الأساسية</a></strong></li><li><strong><a href="#questions-workers">أسئلة وإجابات</a></strong></li></ul>
 
 
 
