--- a/ko/workers/index.html
+++ b/ko/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>근로자</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 10일 오전 9:52</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 25일 오후 3:13</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><strong><a href="#ui">실업 보험</a></strong></li><li><strong><a href="#safe-workplaces">작업장 내 안전 유지</a></strong></li><li><strong><a href="#working-parents">맞벌이 부모를 위한 지원</a></strong></li><li><strong><a href="#temp-housing">필수 근로자를 위한 임시 거처</a></strong></li><li><strong><a href="#questions-workers">질문 및 답변</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#ui">실업 보험</a></strong></li><li><strong><a href="#safe-workplaces">작업장 내 안전 유지</a></strong></li><li><strong><a href="#working-parents">맞벌이 부모를 위한 지원</a></strong></li><li><strong><a href="#temp-housing">필수 근로자를 위한 임시 거처</a></strong></li><li><strong><a href="#questions-workers">질문 및 답변</a></strong></li></ul>
 
 
 
