--- a/es/workers/index.html
+++ b/es/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Trabajadores</h1>
           
-            <p class="small-text">Última actualización&nbsp;10 de marzo de 2021 a las 9:52 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;25 de marzo de 2021 a las 3:13 p. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><strong><a href="#ui">seguro de desempleo</a></strong></li><li><strong><a href="#safe-workplaces">mantenimiento de la seguridad en los lugares de trabajo</a></strong></li><li><strong><a href="#working-parents">apoyo para padres trabajadores</a></strong></li><li><strong><a href="#temp-housing">vivienda temporal para trabajadores esenciales</a></strong></li><li><strong><a href="#questions-workers">preguntas y respuestas</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#ui">seguro de desempleo</a></strong></li><li><strong><a href="#safe-workplaces">mantenimiento de la seguridad en los lugares de trabajo</a></strong></li><li><strong><a href="#working-parents">apoyo para padres trabajadores</a></strong></li><li><strong><a href="#temp-housing">vivienda temporal para trabajadores esenciales</a></strong></li><li><strong><a href="#questions-workers">preguntas y respuestas</a></strong></li></ul>
 
 
 
