--- a/tl/workers/index.html
+++ b/tl/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Manggagawa</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 10, 2021 sa 9:52 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 25, 2021 sa 3:13 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><strong><a href="#ui">Insurance para sa nawalan ng trabaho</a></strong></li><li><strong><a href="#safe-workplaces">Pagpapanatiling ligtas sa mga lugar ng trabaho</a></strong></li><li><strong><a href="#working-parents">Suporta para sa mga nagtatrabahong magulang</a></strong></li><li><strong><a href="#temp-housing">Pansamantalang pabahay para sa mga mahalagang manggagawa</a></strong></li><li><strong><a href="#questions-workers">Mga tanong at sagot</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#ui">Insurance para sa nawalan ng trabaho</a></strong></li><li><strong><a href="#safe-workplaces">Pagpapanatiling ligtas sa mga lugar ng trabaho</a></strong></li><li><strong><a href="#working-parents">Suporta para sa mga nagtatrabahong magulang</a></strong></li><li><strong><a href="#temp-housing">Pansamantalang pabahay para sa mga mahalagang manggagawa</a></strong></li><li><strong><a href="#questions-workers">Mga tanong at sagot</a></strong></li></ul>
 
 
 
