--- a/vi/workers/index.html
+++ b/vi/workers/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Người Lao Động</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;10 tháng 3, 2021 lúc 9:52</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 3, 2021 lúc 15:13</p>
           
         </div>
       </div>
@@ -163,11 +163,11 @@
 
 
 
-<p>Trên trang này:</p>
+<p class="h3">Trên trang này:</p>
 
 
 
-<ul><li><strong><a href="#ui">Bảo hiểm thất nghiệp</a></strong></li><li><strong><a href="#safe-workplaces">Giữ nơi làm việc luôn an toàn</a></strong></li><li><strong><a href="#working-parents">Hỗ trợ cho cha mẹ của người lao động</a></strong></li><li><strong><a href="#temp-housing">Nhà ở tạm thời dành cho người lao động trong những ngành nghề thiết yếu</a></strong></li><li><strong><a href="#questions-workers">Hỏi và đáp</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="#ui">Bảo hiểm thất nghiệp</a></strong></li><li><strong><a href="#safe-workplaces">Giữ nơi làm việc luôn an toàn</a></strong></li><li><strong><a href="#working-parents">Hỗ trợ cho cha mẹ của người lao động</a></strong></li><li><strong><a href="#temp-housing">Nhà ở tạm thời dành cho người lao động trong những ngành nghề thiết yếu</a></strong></li><li><strong><a href="#questions-workers">Hỏi và đáp</a></strong></li></ul>
 
 
 
