Update page - taxes.html f62d8e8289d0422fd977daae366a42d914357aa9

--- a/ar/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/ar/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>غرف فندقية لموظفي الرعاية الصحية في كاليفورنيا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;3:59 م الساعة 23 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:11 م الساعة 25 مارس 2021</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>في هذه الصفحة:</p>
+<p class="h3">في هذه الصفحة:</p>
 
 
 
-<ul><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#program-eligibility">التأهل للبرنامج</a></strong></li><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#reserve-room">حجز غرفة</a></strong></li><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">نقطة الاتصال لمرافق الرعاية الصحية</a></strong></li><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#questions-workers">أسئلة وإجابات</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#program-eligibility">التأهل للبرنامج</a></strong></li><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#reserve-room">حجز غرفة</a></strong></li><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">نقطة الاتصال لمرافق الرعاية الصحية</a></strong></li><li><strong><a href="/ar/hotel-rooms-for-california-healthcare-workers/#questions-workers">أسئلة وإجابات</a></strong></li></ul>
 
 
 
