--- a/manage-stress-for-health/index.html
+++ b/manage-stress-for-health/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Manage stress for health</h1>
           
-            <p class="small-text">Last updated&nbsp;March 24, 2021 at 9:32 AM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 4:32 PM</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Tools for families facing stress</h4>
+            <h3>Tools for families facing stress</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -228,7 +228,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Tools for parents to help children</h4>
+            <h3>Tools for parents to help children</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -251,7 +251,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Tools for families with school-related stress</h4>
+            <h3>Tools for families with school-related stress</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
