--- a/taxes/index.html
+++ b/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;March 24, 2021 at 9:49 AM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 4:33 PM</p>
           
         </div>
       </div>
@@ -269,7 +269,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Are there any tax deductions for people affected by the COVID-19 outbreak?</h4>
+            <h3>Are there any tax deductions for people affected by the COVID-19 outbreak?</h3>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
