--- a/tl/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/tl/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga kuwarto sa hotel para sa mga manggagawa sa pangangalagang pangkalusugan ng California</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 23, 2021 sa 3:59 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 25, 2021 sa 3:11 PM</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>Sa page na ito:</p>
+<p class="h3">Sa page na ito:</p>
 
 
 
-<ul><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#program-eligibility">Pagiging kwalipikado sa programa</a></strong></li><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#reserve-room">Pagpapareserba ng kuwarto</a></strong></li><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">Makakaugnayan para sa mga pasilidad ng pangangalagang pangkalusugan</a></strong></li><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#questions-workers">Mga tanong at sagot</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#program-eligibility">Pagiging kwalipikado sa programa</a></strong></li><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#reserve-room">Pagpapareserba ng kuwarto</a></strong></li><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">Makakaugnayan para sa mga pasilidad ng pangangalagang pangkalusugan</a></strong></li><li><strong><a href="/tl/hotel-rooms-for-california-healthcare-workers/#questions-workers">Mga tanong at sagot</a></strong></li></ul>
 
 
 
