--- a/vi/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/vi/hotel-rooms-for-california-healthcare-workers/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Phòng khách sạn dành cho nhân viên chăm sóc sức khỏe California</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 2, 2021 lúc 15:59</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 3, 2021 lúc 15:11</p>
           
         </div>
       </div>
@@ -163,11 +163,11 @@
 
 
 
-<p>Trên trang này:</p>
+<p class="h3">Trên trang này:</p>
 
 
 
-<ul><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#program-eligibility">Điều kiện tham gia chương trình</a></strong></li><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#reserve-room">Đặt phòng</a></strong></li><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">Đầu Mối Liên Lạc cho các cơ sở chăm sóc sức khỏe</a></strong></li><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#questions-workers">Hỏi và đáp</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#program-eligibility">Điều kiện tham gia chương trình</a></strong></li><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#reserve-room">Đặt phòng</a></strong></li><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">Đầu Mối Liên Lạc cho các cơ sở chăm sóc sức khỏe</a></strong></li><li><strong><a href="/vi/hotel-rooms-for-california-healthcare-workers/#questions-workers">Hỏi và đáp</a></strong></li></ul>
 
 
 
