--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;March 9, 2021 at 10:52 AM</p>
+            <p class="small-text">Last updated&nbsp;March 25, 2021 at 4:30 PM</p>
           
         </div>
       </div>
@@ -161,7 +161,7 @@
   <div class="row">
 
     <div class="col-md-9 order-last order-md-1">
-      <h3 class="color-primary mt-0">Sign up for COVID-19 exposure notifications
+      <h2 class="h3 color-primary mt-0">Sign up for COVID-19 exposure notifications
       </h3>
       <p>Add CA Notify to your phone and get notified if you were near someone with COVID-19.
       </p>
@@ -215,7 +215,7 @@
 
 <div class="row py-4">
     <div class="col-md-4">
-      <img src="https://files.covid19.ca.gov/img/Asset5at2x1.png" alt="illustration of COVID close contacts"  class="mx-auto d-block" style="width: 250px;">
+      <img src="https://files.covid19.ca.gov/img/Asset5at2x1.png" alt="illustration of COVID close contacts" class="mx-auto d-block" style="width: 250px;">
     </div>
     <div class="col-md-8">
       <p>Contact tracers will:</p>
@@ -259,7 +259,7 @@
 </p>
     </div>
 <div class="col-md-4">
-      <img src="https://files.covid19.ca.gov/img/Asset4at2x1.png" alt="illustration of man on phone"  class="mx-auto d-block" style="width: 250px;">
+      <img src="https://files.covid19.ca.gov/img/Asset4at2x1.png" alt="illustration of man on phone" class="mx-auto d-block" style="width: 250px;">
     </div>
   </div>
 
@@ -314,7 +314,7 @@
       </ul>
     </div>
 <div class="col-md-4">
-      <img src="https://files.covid19.ca.gov/img/Asset2-1.png" alt="illustration of a public health worker"  class="mx-auto d-block" style="width: 250px;">
+      <img src="https://files.covid19.ca.gov/img/Asset2-1.png" alt="illustration of a public health worker" class="mx-auto d-block" style="width: 250px;">
     </div>
   </div>
 
@@ -322,7 +322,7 @@
 
 <div class="row py-4">
     <div class="col-md-4">
-      <img src="https://files.covid19.ca.gov/img/Asset7at2x1.png" alt="illustration of a phone"  class="mx-auto d-block" style="width: 250px;">
+      <img src="https://files.covid19.ca.gov/img/Asset7at2x1.png" alt="illustration of a phone" class="mx-auto d-block" style="width: 250px;">
     </div>
     <div class="col-md-8">
       <ul>
