--- a/es/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/es/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Habitaciones de hotel para los trabajadores sanitarios de California</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de febrero de 2021 a las 3:59 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;25 de marzo de 2021 a las 3:11 p. m.</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>En esta página encontrará:</p>
+<p class="h3">En esta página encontrará:</p>
 
 
 
-<ul><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#program-eligibility">elegibilidad para el programa</a></strong></li><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#reserve-room">reservación de una habitación</a></strong></li><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">punto de contacto para centros de atención médica</a></strong></li><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#questions-workers">preguntas y respuestas</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#program-eligibility">elegibilidad para el programa</a></strong></li><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#reserve-room">reservación de una habitación</a></strong></li><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">punto de contacto para centros de atención médica</a></strong></li><li><strong><a href="/es/hotel-rooms-for-california-healthcare-workers/#questions-workers">preguntas y respuestas</a></strong></li></ul>
 
 
 
