--- a/ko/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/ko/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>캘리포니아 의료 종사자를 위한 호텔 객실</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 23일 오후 3:59</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 25일 오후 3:11</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>본 페이지의 내용:</p>
+<p class="h3">본 페이지의 내용:</p>
 
 
 
-<ul><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#program-eligibility">프로그램 해당 자격</a></strong></li><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#reserve-room">객실 예약하기</a></strong></li><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">의료 시설에 대한 연락 담당자</a></strong></li><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#questions-workers">질문 및 답변</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#program-eligibility">프로그램 해당 자격</a></strong></li><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#reserve-room">객실 예약하기</a></strong></li><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">의료 시설에 대한 연락 담당자</a></strong></li><li><strong><a href="/ko/hotel-rooms-for-california-healthcare-workers/#questions-workers">질문 및 답변</a></strong></li></ul>
 
 
 
