--- a/zh-hans/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/zh-hans/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为加州医务人员提供的酒店客房</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月23日, 下午3:59</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月25日, 下午3:11</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此页面包含的内容：</p>
+<p class="h3">此页面包含的内容：</p>
 
 
 
-<ul><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#program-eligibility">计划参与资格</a></strong></li><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#reserve-room">预订客房</a></strong></li><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">医疗保健机构联络人</a></strong></li><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#questions-workers">问题与解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#program-eligibility">计划参与资格</a></strong></li><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#reserve-room">预订客房</a></strong></li><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">医疗保健机构联络人</a></strong></li><li><strong><a href="/zh-hans/hotel-rooms-for-california-healthcare-workers/#questions-workers">问题与解答</a></strong></li></ul>
 
 
 
