--- a/zh-hant/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/zh-hant/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為加州醫務人員提供的酒店客房</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午3:59</p>
+            <p class="small-text">最近更新&nbsp;2021年3月25日, 下午3:11</p>
           
         </div>
       </div>
@@ -161,11 +161,11 @@
 
 
 
-<p>此頁面包含的內容：</p>
+<p class="h3">此頁面包含的內容：</p>
 
 
 
-<ul><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#program-eligibility">計劃參與資格</a></strong></li><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#reserve-room">預訂客房</a></strong></li><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">醫療保健機構聯絡人</a></strong></li><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#questions-workers">問題與解答</a></strong></li></ul>
+<ul class="toc"><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#program-eligibility">計劃參與資格</a></strong></li><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#reserve-room">預訂客房</a></strong></li><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#healthcare-facilities">醫療保健機構聯絡人</a></strong></li><li><strong><a href="/zh-hant/hotel-rooms-for-california-healthcare-workers/#questions-workers">問題與解答</a></strong></li></ul>
 
 
 
